syntax = "proto3";

package chat;

option go_package = "proto/";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message UserList {
  repeated string users = 1;
}

message ChatMessage {
  string from = 1;
  string message = 2;
  string to = 3;
}

message Empty {}

service ChatService {
  // Unary RPC
  rpc Login(LoginRequest) returns (LoginResponse);
  
  // Server Streaming RPC
  rpc StreamUsers(Empty) returns (stream UserList);
  
  // Bidirectional Streaming RPC
  rpc ChatStream(stream ChatMessage) returns (stream ChatMessage);
  
  // Client Streaming RPC
  rpc SendMultipleMessages(stream ChatMessage) returns (Empty);
}